syntax = "proto3";

package post;
option go_package = "./;post";

service PostService {
  rpc CreatePost(TCreatePostRequest) returns (TCreatePostResponse) {}
  rpc UpdatePost(TUpdatePostRequest) returns (TUpdatePostResponse) {}
  rpc DeletePost(TDeletePostRequest) returns (TDeletePostResponse) {}
  rpc GetPostById(TGetPostByIdRequest) returns (TGetPostByIdResponse) {}
  rpc GetPostsOnPage(TGetPostsOnPageRequest) returns (TGetPostsOnPageResponse) {
  }
}

message TPost {
  uint64 PostId = 1;
  string Title = 2;
  string Content = 3;
  string AuthorLogin = 4;
}

message TCreatePostRequest {
  string Title = 1;
  string Content = 2;
  string AuthorLogin = 3;
}

message TCreatePostResponse {
  bool Created = 1;
  optional uint64 PostId = 2;
}

message TUpdatePostRequest {
  uint64 PostId = 1;
  string Title = 2;
  string Content = 3;
  string AuthorLogin = 4;
}

message TUpdatePostResponse { bool Updated = 1; }

message TDeletePostRequest {
  uint64 PostId = 1;
  string AuthorLogin = 2;
}

message TDeletePostResponse { bool Deleted = 1; }

message TGetPostByIdRequest { uint64 PostId = 1; }

message TGetPostByIdResponse { optional TPost Post = 1; }

message TGetPostsOnPageRequest { uint64 PageId = 1; }

message TGetPostsOnPageResponse { repeated TPost Posts = 1; }